--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-requests
-Pillow
-futures;python_version<"3.2"
+Pillow >= 7.2.0
+aiohttp >= 3.6.3
+pytest >= 6.1.2
+pytest-aiohttp >= 0.3.0
+pytest-cov >= 2.11.1
+pytest-runner >= 5.2
